namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thegym
  labels: 
    istio-injection: enabled
---
