gaeimporter.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaeimporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: gaeimporter
      version: 0.0.1     
  template:
    metadata:
      name: gaeimporter
      labels:
        app: thegym
        component: gaeimporter
        version: 0.0.1   
    spec:
      containers:
      - name: gaeimporter
        image: eu.gcr.io/esiemes-default/gaeimporter
        imagePullPolicy: Always
        ports:
        - containerPort: 80
