gcp-thesimplegym.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: messagelistener
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: thegym
      component: messagelistener
      version: 0.0.1  
  serviceName: "messagelistener"
  template:
    metadata:
      name: messagelistener
      labels:
        app: thegym
        component: messagelistener
        version: 0.0.1  
    spec:
      containers:
      - name: messagelistener
        image: digitalemil/thesimplegym:microservice-messagelistener-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: web
---
apiVersion: v1
kind: Service
metadata:
  name: messagelistener
spec:
  selector:
    app: thegym
    component: messagelistener
    version: 0.0.1    
  clusterIP: None
  ports:
  -  name: http-port
     port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: ui
      version: 0.0.1     
  template:
    metadata:
      name: ui
      labels:
        app: thegym
        component: ui
        version: 0.0.1   
    spec:
      containers:
      - name: ui
        image: digitalemil/thesimplegym:microservice-ui-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: ui
  labels:
    app: thegym
    component: ui
    version: 0.0.1
spec:
  selector:
    app: thegym
    component: ui
    version: 0.0.1  
  ports:
    - name: "http" 
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagetransformer
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: messagetransformer
      version: 0.0.1    
  template:
    metadata:
      name: messagetransformer
      labels:
        app: thegym
        component: messagetransformer
        version: 0.0.1      
    spec:
      containers:
      - name: messagetransformer
        image: digitalemil/thesimplegym:microservice-messagetransformer-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8082
---
kind: Service
apiVersion: v1
metadata:
  name: messagetransformer
spec:
  selector:
    app: thegym
    component: messagetransformer
    version: 0.0.1    
  ports:
    - protocol: TCP
      name: "http" 
      port: 80
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagevalidator
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: messagevalidator
      version: 0.0.1  
  template:
    metadata:
      name: messagevalidator
      labels:
        app: thegym
        component: messagevalidator
        version: 0.0.1   
    spec:
      containers:
      - name: messagevalidator
        image: digitalemil/thesimplegym:microservice-messagevalidator-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
---
kind: Service
apiVersion: v1
metadata:
  name: messagevalidator
spec:
  selector:
    app: thegym
    component: messagevalidator
    version: 0.0.1    
  ports:
    - protocol: TCP
      port: 80
      name: "http" 
      targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pmmlevaluator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: pmmlevaluator
      version: 0.0.1  
  template:
    metadata:
      name: pmmlevaluator
      labels:
        app: thegym
        component: pmmlevaluator
        version: 0.0.1  
    spec:
      containers:
      - name: pmmlevaluator
        image: digitalemil/thesimplegym:microservice-pmmlevaluator-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: pmmlevaluator
spec:
  selector:
    app: thegym
    component: pmmlevaluator
    version: 0.0.1    
  ports:
    - protocol: TCP
      port: 80
      name: "http" 
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: messageloader
      version: 0.0.1  
  template:
    metadata:
      name: loader
      labels:
        app: thegym
        component: messageloader
        version: 0.0.1  
    spec:
      containers:
      - name: loader
        image: digitalemil/thesimplegym:microservice-gcploadgenerator-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: messageloader
spec:
  selector:
    app: thegym
    component: messageloader
    version: 0.0.1    
  clusterIP: None
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gaeimporter
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: gaeimporter
      version: 0.0.1     
  template:
    metadata:
      name: gaeimporter
      labels:
        app: thegym
        component: gaeimporter
        version: 0.0.1   
    spec:
      containers:
      - name: gaeimporter
        image: eu.gcr.io/esiemes-default/gaeimporter
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: gaeimporter
spec:
  selector:
    app: thegym
    component: gaeimporter
    version: 0.0.1  
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
