loader.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thegym
      component: messageloader
      version: 0.0.1  
  template:
    metadata:
      name: loader
      labels:
        app: thegym
        component: messageloader
        version: 0.0.1  
    spec:
      containers:
      - name: loader
        image: digitalemil/thesimplegym:microservice-loadgenerator-v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: messageloader
spec:
  selector:
    app: thegym
    component: messageloader
    version: 0.0.1    
  clusterIP: None
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
