ui.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ui
spec:
  selector:
    app: thegym
    component: ui
    version: 0.0.1
  ports:
    - name: "http"
      protocol: TCP
      port: 80
      targetPort: 80
