uisvc2.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ui2
  labels:
    app: thegym
    component: ui
    version: 0.0.1
spec:
  selector:
    app: thegym
    component: ui
    version: 0.0.1
  ports:
    - name: "http"
      port: 80
