istio-gateway-ui.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
   name: ui-thegym
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP 
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ui-thegym
spec:
  hosts:
  - "*"
  gateways:
  - ui-thegym
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: ui.thegym.svc.cluster.local
