se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: uise
spec:
  hosts:
  - messagelistener-0.messagelistener 
  - messagelistener-1.messagelistener 
  - messagelistener-2.messagelistener 
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: http
  resolution: DNS
